Changed Title and H1
getting used to commits

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Euphorious.GitHub.io by euphorious</title>
+    <title>avArena.com</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Euphorious.GitHub.io</h1>
+        <h1>Hello World!</h1>
         <p>webpage test</p>
         <p class="view"><a href="https://github.com/euphorious">View the Project on GitHub <small>euphorious</small></a></p>
         <ul>
