--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </header>
       <section>
-        <p><img src="https://drive.google.com/file/d/0B1oXdtu8gQe_Y1RueGJ3STF1QzQ/view?usp=sharing" alt="My Unicorn"></p>
+        <p><img src="https://drive.google.com/open?id=0B1oXdtu8gQe_Y1RueGJ3STF1QzQ" alt="My Unicorn"></p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
